<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="album" type="com.example.proyectomoviles.models.Album"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        tools:context=".ui.NewAlbumTrackFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/ad_cover"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="start"
                android:background="@color/gray"
                android:scaleType="centerInside"
                tools:srcCompat="@tools:sample/backgrounds/scenic"
                android:contentDescription="@string/cover_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ad_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@{album.name}"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="Buscando América" />

                <TextView
                    android:id="@+id/ad_release_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@{album.formattedReleaseDate}"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    tools:text="1984/08/01" />

                <TextView
                    android:id="@+id/ad_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:text="@{album.genre}"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="Salsa" />

                <TextView
                    android:id="@+id/ad_record_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@{album.recordLabel}"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    tools:text="Elektra" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/trackDetailTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/track_detail_title"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Detalles de canción" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/nameTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/track_name"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/ic_baseline_error_24"
            tools:text="Nombre"
            app:counterMaxLength="64"
            app:helperText="@string/required"
            app:counterEnabled="true"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameInputEditText"
                android:inputType="text"
                android:maxLength="65"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/minuteTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/track_minutes"
            app:errorEnabled="true"
            tools:text="00"
            app:helperText="@string/required"
            app:counterEnabled="true"
            app:counterMaxLength="2"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/minuteInputEditText"
                android:maxLength="2"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/secondTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/track_seconds"
            app:errorEnabled="true"
            tools:text="00"
            app:helperText="@string/required"
            app:counterEnabled="true"
            app:counterMaxLength="2"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/secondInputEditText"
                android:maxLength="2"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/saveButton"
                app:layout_constraintBottom_toBottomOf="parent"
                android:backgroundTint="@color/red"
                android:text="@string/cancel_button"
                tools:text="Cancelar"/>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/cancelButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:backgroundTint="@color/primary"
                android:text="@string/save_button"
                tools:text="Guardar"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>