...
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_albumes"
        android:icon="@drawable/ic_album"
        android:title="@string/title_albumes" />

    <item
        android:id="@+id/navigation_artists"
        android:icon="@drawable/ic_artist"
...
